# HoraGladiis

./: .gitignore  AnimatedSprite.cpp  AnimatedSprite.hpp  CMakeLists.txt  Camera.cpp  Character.cpp  Character.hpp  DeltaTime.hpp  EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp  GameLevel.cpp  GameLevel.hpp  Player.cpp  Player.hpp  README.md  Tile.cpp  Tile.hpp  Tilemap.cpp  Tilemap.hpp  Tileset.hpp  main.cpp  misc.hpp
.github/workflows/: cmake.yml  codestyle.yml
assets/tiles/qwe/tmp/: 0001-0045.avi
src/: AnimatedSprite.hpp  CMakeLists.txt  Camera.hpp  DeltaTime.cpp  Direction.hpp  EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp  GameLevel.cpp  KeyboardHandler.cpp  KeyboardHandler.hpp  LICENSE  Player.cpp  Player.hpp  README.md  Tilemap.cpp  Tilemap.hpp  Tileset.cpp  main.cpp
src/Menus/: MainMenu.cpp  MainMenu.hpp
tests/: CMakeLists.txt  collision_test.cpp  events_test.cpp  test1.cpp  test2.cpp
